--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "liquid": "^5.1.1",
+    "liquid-express-views": "^1.0.8",
     "mongoose": "^6.0.12"
   }
 }
