--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "liquid": "^5.1.1",
     "liquid-express-views": "^1.0.8",
-    "mongoose": "^6.0.12"
+    "method-override": "^3.0.0",
+    "mongoose": "^6.0.12",
+    "morgan": "^1.10.0"
   }
 }
